Bug 65250 - [Regression][SNA] KSnapshot started to capture rectangular region boundaries and size toolbox when compositing is enabled since xf86-video-intel 2.21.7
Summary: [Regression][SNA] KSnapshot started to capture rectangular region boundaries ...
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-01 20:35 UTC by ValdikSS
Modified: 2013-06-03 15:54 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description ValdikSS 2013-06-01 20:35:35 UTC
KSnapshot started to capture rectangular region boundaries and size toolbox when compositing is enabled. Only in SNA mode.
http://i.imgur.com/MPaFYDS.png

KDE Bugs team says it's xf86-video-intel bug.
Please see this https://bugs.kde.org/show_bug.cgi?id=320476
Comment 1 Chris Wilson 2013-06-02 11:14:49 UTC
Once again KDE/Qt and kwin amaze me by their inefficient rendering. At least it found a bug in my code. The issue here is that kwin continues to render the static composited image (that is the cause of the black flash), and the DDX failed to undo its shallow copy of the scanout used by ksnapshot for its region selection GUI.

commit 66ad4d6f3c990bd40d816b4a22122bbf64786e4c
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sun Jun 2 12:13:46 2013 +0100

    sna/dri: Undo any COW before performing a copy with DRI2CopyRegion
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=65250
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 2 Martin Flöser 2013-06-03 15:54:07 UTC
@Chris: if you notice any wrong behavior in KWin please let us know. The only way to improve the code is if the information is passed on from more experienced people.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.