sna/dri: Undo any COW before performing a copy with DRI2CopyRegion

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=65250
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>